# rust-httpapi

./: .gitlab-ci.yml  .rancher-pipeline.yml  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.without_ci  deployment.yaml  user_cargo_config_in_docker.toml
src/: main.rs
src/models/: http_structs.rs  mod.rs
src/views/: http_api.rs  mod.rs
